syntax = "proto3";

package scalekit.v1.login_box;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "scalekit/v1/commons/commons.proto";
import "scalekit/v1/connections/connections.proto";
import "scalekit/v1/options/options.proto";

option go_package = "github.com/scalekit-inc/scalekit/pkg/grpc/login_box";

service LoginBoxService {
  rpc GetLoginMethods(GetLoginMethodRequest) returns (GetLoginMethodResponse) {
    option (scalekit.v1.options.auth_option) = {authentication_type: NONE};
    option (google.api.http) = {get: "/api/v1/login"};
  }

  rpc SetLoginMethod(SetLoginMethodRequest) returns (SetLoginMethodResponse) {
    option (scalekit.v1.options.auth_option) = {authentication_type: NONE};
    option (google.api.http) = {
      post: "/api/v1/login"
      body: "data"
    };
  }

  rpc GetBoxCustomizations(GetBoxCustomizationRequest) returns (GetBoxCustomizationResponse) {
    option (scalekit.v1.options.auth_option) = {authentication_type: NONE};
    option (google.api.http) = {get: "/api/v1/login:customizations"};
  }
}

message GetLoginMethodRequest {
  string auth_request_id = 1 [
    (buf.validate.field).string = {
      min_len: 1
      max_len: 32
    },
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "unique identifier of the authorization request"
      example: "\"req_121312434123312\""
    }
  ];
}

message GetLoginMethodResponse {
  repeated LoginConnections connections = 1;
}

message LoginConnections {
  string connection_id = 1 [
    (buf.validate.field).string = {
      min_len: 1
      max_len: 32
    },
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Unique identifier for the connection to be toggled"
      example: "\"conn_121312434123312\""
    }
  ];
  connections.ConnectionType connection_type = 2;
  connections.ConnectionProvider connection_provider = 3;
}

message SetLoginMethodRequest {
  string auth_request_id = 1 [
    (buf.validate.field).string = {
      min_len: 1
      max_len: 32
    },
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "unique identifier of the authorization request"
      example: "\"req_121312434123312\""
    }
  ];

  LoginMethodUserRequest data = 2;
}

message LoginMethodUserRequest {
  string email = 1 [(buf.validate.field).string.email = true];
}

message SetLoginMethodResponse {
  string id = 1 [
    (buf.validate.field).string = {
      min_len: 1
      max_len: 32
    },
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Unique identifier for the connection to be toggled"
      example: "\"conn_121312434123312\""
    }
  ];

  connections.ConnectionType type = 2;
  bool magic_link_enabled = 3;
  bool magic_otp_enabled = 4;
}

message GetBoxCustomizationRequest {}

message GetBoxCustomizationResponse {
  google.protobuf.Struct customization_settings = 2;
}
